--- a/public/02-best-teams.html
+++ b/public/02-best-teams.html
@@ -177,155 +177,17 @@ const template = function (img, title, a) {
 					<div class="container">
 						<div class="tabs">
 							<div class="tabs__caption">
-								<div class="tabs__btn active"><span>Онбординг</span></div>
 								<div class="tabs__btn"><span>Дашборд</span></div>
-								<div class="tabs__btn"><span>Цифровой помощник</span></div>
+								<div class="tabs__btn active"><span>Цифровой помощник</span></div>
+								<div class="tabs__btn"><span>Онбординг</span></div>
 								<div class="tabs__btn"><span>Молодёжный туризм</span></div>
 							</div>
 							<div class="tabs__wrap">
-								<div class="tabs__content active">
-									<div class="tabs__content-wrap">
-										<div class="tabs__title">
-											<h4>Онбординг</h4>
-											<p>Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</p>
-										</div>
-										<div class="sBestTeams__list">
-											<h4>Победители</h4>
-											<div class="sBestTeams__row row">
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--first">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>I</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--second">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>II</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--third">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>III</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="sBestTeams__list">
-											<h4>Шортлист</h4>
-											<div class="sBestTeams__row row">
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--light">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>IV</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--light">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>V</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-												<div class="col-12 col-lg-4">
-													<div class="best-item best-item--light">
-														<div class="best-item__head">
-															<div class="best-item__place"><span>VI</span><small>место</small>
-															</div>
-															<div class="best-item__team"><small>Команда</small>
-																<h5>Digital Sith</h5>
-															</div>
-														</div>
-														<ul>
-															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
-															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
-															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
-														</ul>
-														<a class="best-item__more" href="#">Подробнее
-														</a>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
 								<div class="tabs__content">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Дашборд</h4>
-											<p>Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</p>
+											<p>Разработай дашборд – инструмент анализа и визуализации данных,поступающих от субъектов молодёжной политики России</p>
 										</div>
 										<div class="sBestTeams__list">
 											<h4>Победители</h4>
@@ -459,7 +321,7 @@ const template = function (img, title, a) {
 										</div>
 									</div>
 								</div>
-								<div class="tabs__content">
+								<div class="tabs__content active">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
 											<h4>Цифровой помощник</h4>
@@ -600,8 +462,146 @@ const template = function (img, title, a) {
 								<div class="tabs__content">
 									<div class="tabs__content-wrap">
 										<div class="tabs__title">
+											<h4>Онбординг</h4>
+											<p>Разработай digital-систему для онбординга новых сотрудниковс элементами геймификации</p>
+										</div>
+										<div class="sBestTeams__list">
+											<h4>Победители</h4>
+											<div class="sBestTeams__row row">
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--first">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>I</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--second">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>II</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--third">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>III</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="sBestTeams__list">
+											<h4>Шортлист</h4>
+											<div class="sBestTeams__row row">
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--light">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>IV</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--light">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>V</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+												<div class="col-12 col-lg-4">
+													<div class="best-item best-item--light">
+														<div class="best-item__head">
+															<div class="best-item__place"><span>VI</span><small>место</small>
+															</div>
+															<div class="best-item__team"><small>Команда</small>
+																<h5>Digital Sith</h5>
+															</div>
+														</div>
+														<ul>
+															<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+															<li><span>Констанинвоский Александр</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+														</ul>
+														<a class="best-item__more" href="#">Подробнее
+														</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="tabs__content">
+									<div class="tabs__content-wrap">
+										<div class="tabs__title">
 											<h4>Молодёжный туризм</h4>
-											<p>Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</p>
+											<p>Разработай мобильное приложение для сайта студтуризм.рф</p>
 										</div>
 										<div class="sBestTeams__list">
 											<h4>Победители</h4>
