--- a/public/02-best-teams.html
+++ b/public/02-best-teams.html
@@ -208,7 +208,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -228,7 +228,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -248,7 +248,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -273,7 +273,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -293,7 +293,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -313,7 +313,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -346,7 +346,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -366,7 +366,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -386,7 +386,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -411,7 +411,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -431,7 +431,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -451,7 +451,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -484,7 +484,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -504,7 +504,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -524,7 +524,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -549,7 +549,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -569,7 +569,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -589,7 +589,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -622,7 +622,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -642,7 +642,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -662,7 +662,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -687,7 +687,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -707,7 +707,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -727,7 +727,7 @@ const template = function (img, title, a) {
 															<li><span>Кипин Максим</span><small>Ярославская область</small></li>
 															<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
 														</ul>
-														<a class="best-item__more" href="#">Подробнее
+														<a class="best-item__more" href="#" data-src="modal-call" data-fancybox="modal">Подробнее
 														</a>
 													</div>
 												</div>
@@ -798,23 +798,65 @@ const template = function (img, title, a) {
 		<!--  start modals-->
 		<div id="modal-call" style="display: none">
 			<div class="modal-win">
-				<div class="form-wrap">
-					<form>
-						<div class="text-center">
-							<div class="form-wrap__title form-data h3 ttu">Обратный звонок
+				<div class="winner">
+					<div class="winner__row row">
+						<div class="winner__col col-xl-auto order-xl-4">
+							<div class="winner__title d-xl-none">Stinger 2.0
 							</div>
-							<p class="after-headline">Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут</p>
+							<div class="best-item">
+								<ul>
+									<li><span>Ярославский Валентин</span><small>Ярославская область</small></li>
+									<li><span>Константиновский Александр</span><small>Ярославская область</small></li>
+									<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+									<li><span>Кипин Максим</span><small>Ярославская область</small></li>
+									<li><span>Яровая Валентина</span><small>Ярославская область</small></li>
+								</ul>
+							</div>
 						</div>
-						<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/> 
+						<div class="col">
+							<div class="winner__content">
+								<div class="winner__title">Stinger 2.0
+								</div>
+								<ul>
+									<li><small>Тизер решения</small>
+										<p>Web-приложение для организации взаимодействия между поставщиками сельскохозяйственной продукции, перевозчиками и заказчиками c помощью алгоритмов рекомендации, геолокации и системы электронных очередей.Web-приложение для организации взаимодействия между поставщиками сельскохозяйственной продукции, перевозчиками и заказчиками c помощью алгоритмов рекомендации, геолокации и системы электронных очередей.</p>
+									</li>
+									<li><small>Стек решения</small>
+										<p>фреймворк django, база данных postgres</p>
+									</li>
+									<li><small>Уникальность</small>
+										<p>Уникальность нашей платформы заключается в комплексном решении, объединяющем поставщиков, закупщиков и перевозчиков. Платформа упрощает заключение договоров с помощью электронных подписей и помогает перевозчикам экономить на топливе.</p>
+									</li>
+									<li><small>Стоимость разработки</small>
+										<p>2329 тыс. руб.</p>
+									</li>
+									<li><small>Сроки разработки</small>
+										<p>7 мес. - пилотная версия</p>
+									</li>
+								</ul>
+							</div>
 						</div>
-						<!-- +e.input-wrap-->
-						<button class="form-wrap__btn btn" type="submit"> 
-						</button>
-						<div class="form-wrap__policy">
-							<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-							</label>
+						<div class="col-12 order-xl-5">
+							<div class="winner__btn-wrap">
+								<div class="row">
+									<div class="col-12 col-md-auto">
+										<a class="winner__btn btn btn-outline-primary" href="#">
+											<svg class="icon icon-presentation ">
+												<use xlink:href="img/svg/sprite.svg#presentation"></use>
+											</svg>Скачать презентацию решения
+										</a>
+									</div>
+									<div class="col-12 col-md-auto">
+										<a class="winner__btn btn btn-outline-primary" href="#">
+											<svg class="icon icon-repository ">
+												<use xlink:href="img/svg/sprite.svg#repository"></use>
+											</svg>Ссылка на репозиторий
+										</a>
+									</div>
+								</div>
+							</div>
 						</div>
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
